Linked stylesheet, Added title, made navigation bar for the 2 HTML pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
 
     <div class="navigation">
-        <li><span class="navstyle" onclick="t"
+        <li><span class="navstyle" onclick="transitionToPage('index.html')">Home</span></li>
+        <li><span class="navstyle" onclick="transitionToPage('about.html')">About</span></li>
+
     </div>
 </body>   
 </html>
