Added button, CSS styling with Flexbox, made nave work between pages.

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     </header>
 
     <div class="navigation">
-        <li><span class="navstyle" onclick="transitionToPage('index.html')">Home</span></li>
-        <li><span class="navstyle" onclick="transitionToPage('about.html')">About</span></li>
+        <li><span class="navstyle" onclick="window.location.replace('index.html')">Home</span></li>
+        <li><span class="navstyle" onclick="window.location.replace('about.html')">About</span></li>
 
     </div>
 </body>   
